CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

PROJECT(openni_grabber)

FIND_PACKAGE(PCL 1.2 REQUIRED)

INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})
ADD_DEFINITIONS(-pthread -std=c++11)

ADD_EXECUTABLE(openni_viewer openni_viewer.cpp)
TARGET_LINK_LIBRARIES(openni_viewer ${PCL_LIBRARIES})

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
ENDIF()
